# buda_task_api

./: .dev_env  .dockerignore  .gitignore  .prospector.yaml  README.md  db.sqlite3  docker-compose.yml  dockerfile  manage.py  pyproject.toml
budapi/: asgi.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
budapi/services/: base.py
budapi/tests/: test_api_tobuda.py  test_budapi_utils.py  test_services.py  test_utils.py
model/: admin.py  models.py
model/migrations/: 0001_initial.py
