[tool.poetry]
name = "budaapi"
version = "1.0"
description = "Buda Test Task n°1"
authors = ["Enzo Buscaglia <embuscagliah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
black = "^24.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
